--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -1,28 +1,23 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-$script = <<SCRIPT
-mkdir -p /etc/ansible/roles
-ln -f -s /vagrant /etc/ansible/roles/test-role
-SCRIPT
-
 Vagrant.configure("2") do |config|
 
     config.vm.box       = "bento/ubuntu-16.04"
     config.vm.hostname  = "ansible-test.local"
     config.vm.network "private_network", ip: "192.168.13.37"
-    config.vm.synced_folder "../", "/vagrant"
+    config.vm.synced_folder "../", "/etc/ansible/roles/test"
 
     config.vm.provider "virtualbox" do |vbox|
         vbox.memory = 2048
         vbox.cpus   = 2
     end
 
-    config.vm.provision "shell", inline: $script
+    config.vm.provision "shell", path: "Vagrantboot"
 
     config.vm.provision "ansible_local" do |ansible|
-        ansible.inventory_path    = "tests/inventory"
-        ansible.playbook          = "tests/test.yml"
+        ansible.inventory_path    = "inventory"
+        ansible.playbook          = "test.yml"
         ansible.limit             = "localhost"
     end
 end
