Changed to generic handler name

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,39 +15,39 @@
     src: "{{ item.value }}"
     dest: /etc/apache2/conf-available/{{ item.key }}.conf
   with_dict: "{{ apache_configs }}"
-  notify: restart-apache
+  notify: restart-webserver
 
 - name: Enable configs
   shell: a2enconf {{ item.key }}
   register: _output
   changed_when: "'Enabling conf ' ~ item.key in _output.stdout"
   with_dict: "{{ apache_configs }}"
-  notify: restart-apache
+  notify: restart-webserver
 
 - name: Enable mods
   shell: a2enmod {{ item }}
   register: _output
   changed_when: "'Enabling module ' ~ item in _output.stdout"
   with_items: "{{ apache_mods }}"
-  notify: restart-apache
+  notify: restart-webserver
 
 - name: Disable default vhost
   shell: a2dissite 000-default
   register: _output
   changed_when: "'Site 000-default disabled' in _output.stdout"
-  notify: restart-apache
+  notify: restart-webserver
 
 - name: Add vhosts
   template:
     src: "{{ item.value }}"
     dest: /etc/apache2/sites-available/{{ item.key }}.conf
   with_dict: "{{ apache_sites }}"
-  notify: restart-apache
+  notify: restart-webserver
 
 - name: Enable vhosts
   shell: a2ensite {{ item.key }}
   register: _output
   changed_when: "'Enabling site ' ~ item.key in _output.stdout"
   with_dict: "{{ apache_sites }}"
-  notify: restart-apache
+  notify: restart-webserver
   
