--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -16,6 +16,6 @@ Vagrant.configure("2") do |config|
     config.vm.provision "ansible_local" do |ansible|
         ansible.inventory_path    = "inventory"
         ansible.playbook          = "test.yml"
-        ansible.limit             = "localhost"
+        ansible.limit             = "all"
     end
 end
